# voyandz

./: LICENSE  MANIFEST.in  Makefile  README.md  SPECS.md  setup.cfg  setup.py
config/: 4x4  4x4_only  4x4_with_audio  camera_to_mpjpeg  camera_to_mpjpeg_with_feed  camera_to_mpjpeg_with_feed_continuous  camera_to_mpjpeg_with_feed_ondemand  camera_to_mpjpeg_with_feed_timeout  custom_url  feed_autostart  feed_chain  full_stack  minimal  zerolatency_libx264_camera  zerolatency_nvenc_camera
sandbox/: 01_v4l2.py  02_v4l2_common_feed_pipes.py  02_v4l2_common_feed_threads.py  README  scraps.py  ticktock.c
src/voyandz/: __init__.py  cli.py  config.py  logging.py  server.py  stats.py  version.py
src/voyandz/templates/: stat.html
voyandz/: cli.py  config.py  logging.py  piping.py  server.py  util.py  version.py
voyandz/templates/: home.html  stat.html
