[metadata]
name = voyandz
# Never use voyandz.__version__ here because the voyandz package is dependent on
# packages that may not be installed and won't be installable because of a
# chicken-egg problem: the dependency installer wants to read the version, but
# we need the dependencies already installed to read the version. The `version`
# module is specifically crafted to have no dependencies whatsoever.
version = attr: voyandz.version.VERSION
description = an AV HTTP piping server
long_description = file: README.md
long_description_content_type = text/markdown
author = Robikz
author_email = zalewapl@gmail.com
license = MIT
license_file = LICENSE
url = https://github.com/Zalewa/voyandz

[options]
include_package_data = True
install_requires =
    Flask==2.3.*
    PyYAML==6.*
packages = find:
package_dir =
    = src
python_requires = >=3.8
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    voyandz = voyandz.cli:main
