[metadata]
name = voyandz
description = an AV HTTP piping server
long_description = file: README.md
long_description_content_type = text/markdown
author = Robikz
author_email = zalewapl@gmail.com
license = MIT
license_file = LICENSE
url = https://github.com/Zalewa/voyandz

[options]
include_package_data = True
install_requires =
    Flask==2.3.*
    PyYAML==6.*
    importlib-metadata>=3.0, <7.0; python_version < '3.8.1'
packages = find:
package_dir =
    = src
python_requires = >=3.8
setup_requires =
    setuptools_scm==5.*
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    voyandz = voyandz.cli:main
